--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
@@ -18,9 +18,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item navbar-text"><a class="nav-link" href="index.html">Home</a></li>    
-                <li class="nav-item navbar-text"><a class="nav-link active" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a></li>
-                <li class="nav-item navbar-text"><a class="nav-link" href="contact.html">Contact</a></li>
+            <li class="nav-item navbar-text"><a class="nav-link" href="index.html">Home </a></li>    
+                <li class="nav-item navbar-text"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                <li class="nav-item navbar-text"><a class="nav-link active" href="contact.html">Contact <span class="sr-only">(current)</span></a></li>
                     <ul class="list-group list-group-horizontal-sm navbar-text">
                         <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
                         <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://github.com/ldipaola" target="_blank"><i class="fab fa-github"></i></a></li>
