--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
@@ -18,8 +18,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item navbar-text"><a class="nav-link" href="index.html">Home</a></li>    
-                <li class="nav-item navbar-text"><a class="nav-link active" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item navbar-text"><a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a></li>    
+                <li class="nav-item navbar-text"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
                 <li class="nav-item navbar-text"><a class="nav-link" href="contact.html">Contact</a></li>
                     <ul class="list-group list-group-horizontal-sm navbar-text">
                         <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
@@ -31,7 +31,18 @@
         </div>
         </div>
       </nav>
-      <footer class="navbar bg-dark text-white fixed-bottom">
+      <div class="container">
+          <section>
+              <h2>About</h2>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil architecto ipsum dolorem, omnis eos quasi molestias
+            corrupti iure ut blanditiis, labore atque quaerat fugit deleniti voluptas nisi ratione, praesentium odio porro expedita
+            eius? Hic eaque accusamus atque, officia repudiandae, labore cupiditate ducimus eum illo ratione, vel consequatur a non
+            ipsa?</p>
+          </section>
+
+      </div>
+
+    <footer class="navbar bg-dark text-white fixed-bottom">
         <div class="container">            
             <div class="text-center navbar-text mr-auto">
                 <span>&copy; <script>document.write(new Date().getFullYear());</script> Lucas Di Paola</span>
