added place holder text to index.html

--- a/index.html
+++ b/index.html
@@ -1,56 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/ce4c6ae522.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ce4c6ae522.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mb-5 bg-white rounded">
-        <div class="container">
-        <a class="navbar-brand" href="#">Lucas Di Paola</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item navbar-text"><a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a></li>    
-                <li class="nav-item navbar-text"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                <li class="nav-item navbar-text"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <ul class="list-group list-group-horizontal-sm navbar-text">
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://github.com/ldipaola" target="_blank"><i class="fab fa-github"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="#"><i class="fab fa-twitter"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    </ul>                
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mb-5 bg-white rounded">
+    <div class="container">
+      <a class="navbar-brand" href="#">Lucas Di Paola</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item navbar-text"><a class="nav-link active" href="index.html">Home <span
+                class="sr-only">(current)</span></a></li>
+          <li class="nav-item navbar-text"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+          <li class="nav-item navbar-text"><a class="nav-link" href="contact.html">Contact</a></li>
+          <ul class="list-group list-group-horizontal-sm navbar-text">
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item"
+                href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item"
+                href="https://github.com/ldipaola" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="#"><i
+                  class="fab fa-twitter"></i></a></li>
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="#"><i
+                  class="fab fa-linkedin-in"></i></a></li>
           </ul>
-        </div>
-        </div>
-      </nav>
-      <div class="container">
-          <section>
-              <h2>About</h2>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil architecto ipsum dolorem, omnis eos quasi molestias
-            corrupti iure ut blanditiis, labore atque quaerat fugit deleniti voluptas nisi ratione, praesentium odio porro expedita
-            eius? Hic eaque accusamus atque, officia repudiandae, labore cupiditate ducimus eum illo ratione, vel consequatur a non
-            ipsa?</p>
-          </section>
-
+        </ul>
       </div>
+    </div>
+  </nav>
+  <div class="container">
+    <div class="row">
+    </div>
+    <section>
+      <h2>About</h2>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nihil architecto ipsum dolorem, omnis eos quasi
+        molestias
+        corrupti iure ut blanditiis, labore atque quaerat fugit deleniti voluptas nisi ratione, praesentium odio porro
+        expedita
+        eius? Hic eaque accusamus atque, officia repudiandae, labore cupiditate ducimus eum illo ratione, vel
+        consequatur a non
+        ipsa? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur voluptate voluptatem blanditiis
+        reiciendis veritatis consequuntur itaque, ratione maiores eveniet quos harum ipsam facere totam dignissimos illo
+        adipisci voluptatum nisi placeat consequatur eius ipsum iusto, unde doloremque. Cupiditate quas iste magni eius
+        vitae autem suscipit distinctio aliquam itaque necessitatibus nisi voluptatibus corrupti odio alias, enim eum,
+        reiciendis iure hic cum rem. Deleniti quis magni nemo nobis dicta id dolorum quod perferendis recusandae
+        incidunt, enim molestias pariatur voluptas sit nostrum ut odio iure. Quia quisquam culpa enim repudiandae
+        doloremque unde. Quod doloremque accusantium ipsum nisi voluptas eaque vel, doloribus quia corrupti. Architecto
+        rem fugiat, sit eum, ducimus, adipisci quos odio numquam aperiam aliquam modi voluptates. Nemo et minima cum
+        quis cupiditate reprehenderit repudiandae repellat, voluptatem doloremque cumque officiis, sit quam modi? Illum
+        esse ipsam ipsum autem nam corrupti, unde debitis velit itaque! Illo dolorum quasi neque iusto sunt eum ab
+        recusandae fuga error corporis explicabo aliquam debitis, et quia! Facilis sunt dolor deserunt laudantium
+        consequuntur hic blanditiis est voluptatibus aspernatur asperiores sequi, a nam nisi laborum necessitatibus
+        suscipit veniam fuga perspiciatis iste alias ullam dicta! Deserunt non, labore tenetur et hic aperiam earum
+        officia suscipit natus ut voluptatibus pariatur numquam id quisquam tempora nisi rerum perspiciatis eligendi
+        quas optio odit iusto necessitatibus! A molestiae quo veritatis eveniet quasi officiis repellendus voluptatum
+        voluptas, mollitia ipsa voluptatem. Voluptates qui quis culpa cumque maxime eius quidem, perferendis itaque
+        inventore laudantium hic, ipsam sunt obcaecati architecto quisquam facilis voluptatibus repellat. Voluptate,
+        pariatur dolore quod quam ducimus officia debitis iure similique dolorum delectus magni exercitationem omnis
+        itaque? Officiis perferendis similique sapiente illum rem id sint debitis necessitatibus quos nesciunt iure
+        nihil repudiandae autem, animi harum optio repellendus cumque cum libero! Facere perspiciatis similique tempore
+        libero reiciendis, vel enim ipsam. Cumque nobis, provident officia reprehenderit adipisci molestias voluptas
+        repudiandae architecto doloremque nesciunt beatae aspernatur, eum, expedita rem vitae. Animi corporis facilis
+        repudiandae dolore eligendi aliquam facere nesciunt, odit doloremque natus nulla. A eligendi dolores eos
+        voluptate odio, perferendis, aliquam quae qui nulla mollitia consequatur rem. Doloribus quia mollitia sint
+        cumque alias odit dolore ullam natus porro, sed voluptate amet assumenda. Eligendi reiciendis fuga dicta
+        possimus. Dolorem tempora quia alias et aliquid? Modi molestias saepe in facilis sunt cupiditate rem veritatis
+        aut omnis vero facere autem laboriosam recusandae porro libero, animi alias eum molestiae ad. Molestiae
+        dignissimos neque et accusamus soluta dolores, officia, eligendi aperiam aliquid accusantium quaerat modi.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto corrupti, ipsam, magni iure quis maiores,
+        pariatur facere animi nemo odit dignissimos aperiam consequuntur. Neque dolorum nisi sit ea numquam, itaque
+        perferendis eaque doloribus, similique repudiandae adipisci quis rerum facilis ut officia. Quasi explicabo in
+        pariatur, officiis accusamus labore facilis, veritatis molestiae aspernatur nesciunt dignissimos voluptate.
+        Fugit, molestias laborum? Eaque accusantium repellat id consequuntur porro in quasi nesciunt, odit, et officiis
+        quis amet cum illo ratione earum est quo eius quod nostrum explicabo veniam eos? Delectus consequuntur
+        repudiandae quae. Autem velit incidunt quas debitis laborum sequi quam, quisquam neque perspiciatis quibusdam
+        quod, explicabo vitae accusamus. Ducimus numquam adipisci enim ab similique. Aut blanditiis maxime voluptas.
+        Corrupti excepturi, adipisci est fugit accusantium odio beatae dolorem modi! Optio animi, minus omnis cupiditate
+        explicabo corrupti nisi eum mollitia quo illo atque, itaque necessitatibus aspernatur obcaecati quidem repellat
+        dolorem ex perferendis, fugit reprehenderit sunt nostrum. Odit quasi quaerat sunt molestias, maxime itaque illum
+        quae accusamus corrupti nostrum doloremque labore repellendus, quia fugiat, possimus minus deleniti. Facilis
+        iste ipsam incidunt excepturi labore, harum sunt quidem unde blanditiis cum necessitatibus delectus soluta
+        officiis eos libero cumque laboriosam quae. Accusantium architecto culpa quia aspernatur sequi consequatur, odit
+        enim hic, excepturi laboriosam suscipit quibusdam esse ullam facilis, eaque adipisci et saepe. Sint facilis
+        quibusdam saepe perferendis in quos mollitia libero. Possimus soluta voluptas sint aut quisquam assumenda illo,
+        optio animi id aliquid, eum dolore minima doloribus ad dignissimos quod sed voluptatum omnis! Minus sit incidunt
+        saepe est quod, sunt libero voluptatum ipsa vero? Itaque libero cum amet ducimus adipisci, quam debitis magnam
+        repudiandae accusantium officia sint distinctio? Veritatis quis harum inventore. Illum doloribus, fugiat, ipsum,
+        amet numquam accusantium animi aliquid atque laboriosam tenetur impedit eum facere facilis nulla officiis odit
+        modi quibusdam. Deserunt, dicta cumque fugiat dolorum asperiores similique veritatis dolor minus, animi, quasi
+        esse ullam. Nihil quod fuga consequuntur quisquam fugiat, culpa nulla incidunt eligendi reprehenderit veritatis
+        consectetur eos quas odio nostrum amet ea dolorem numquam expedita error tempore magni? Sunt ratione autem quae
+        deleniti impedit earum accusamus sint eius! Vitae provident ullam magnam odit velit, vel sit eaque incidunt
+        numquam accusantium hic facere quisquam quae ipsum in alias. Neque temporibus iste quas aperiam exercitationem
+        eveniet iure, ad ut aliquam harum, provident quam, odio quisquam repellendus quo vero vitae autem possimus alias
+        labore assumenda nesciunt officia ullam at. Temporibus libero omnis at in. Numquam fugit magnam doloremque,
+        soluta aut itaque nulla tempora nam odit quisquam voluptatem, repudiandae accusamus laudantium autem alias porro
+        distinctio et necessitatibus repellendus. Omnis sunt praesentium adipisci, excepturi facere porro reprehenderit
+        quisquam molestiae eius repellat dignissimos iusto, labore asperiores alias eos dolor placeat velit sit incidunt
+        aliquid culpa. Quasi tempora amet veritatis, quae sapiente necessitatibus deleniti iusto voluptatum quidem
+        eligendi officiis distinctio? Deleniti, recusandae! Dolor reiciendis necessitatibus aut tenetur, minima unde
+        incidunt facere inventore officiis maiores nesciunt est voluptates fugiat quia delectus rerum quasi ipsam vitae,
+        ad obcaecati, sapiente omnis voluptate earum odit? Illum doloremque rem reiciendis nobis harum totam velit
+        accusantium mollitia nisi unde ipsum ad, facilis sint et, odit, eum hic natus beatae fuga? Quas, fugit, placeat,
+        eaque iusto unde quasi quam atque ratione laudantium natus distinctio a dolorem reiciendis! Adipisci saepe
+        corporis amet at labore? Amet, quos! Laudantium at a repellat consectetur obcaecati voluptatum amet enim iste
+        vitae eum ratione cumque placeat, odio, facilis sequi! Numquam ducimus dolores labore aliquam fuga. Laudantium
+        illo cum, explicabo doloribus ex eligendi, porro, repellendus consequatur rem aliquam eius eveniet. A velit est
+        repudiandae amet sed repellendus incidunt dicta, modi eveniet, tenetur optio dolor! Accusantium rem, illo
+        dignissimos saepe veritatis ipsum iure soluta ad eum expedita sit a nihil eveniet assumenda temporibus, modi,
+        qui dicta. Fuga, possimus dolore quibusdam molestiae libero tempora sed consectetur tenetur fugit animi sequi
+        suscipit delectus est rem at temporibus adipisci ullam minima doloribus error vel, iste maiores similique!
+        Facilis nulla eveniet voluptatibus molestiae natus reprehenderit sed quae iste dolores! Quisquam possimus
+        incidunt quo ad modi, magnam eius dignissimos, repellat quas veritatis nesciunt. Impedit, sit eligendi
+        distinctio, ab excepturi quod rerum tempora similique possimus quaerat, unde minima corrupti quos nihil saepe
+        molestias? Magnam natus animi, eaque nisi vitae neque non itaque culpa officiis rem, quas obcaecati adipisci
+        accusamus alias enim totam libero? Voluptas ipsum magnam magni atque at culpa dolorem doloremque qui vitae dicta
+        excepturi labore molestias adipisci, quibusdam nostrum et, accusantium expedita recusandae facere saepe illum.
+        Eveniet, nam pariatur dolore modi dolorum vel nisi alias reprehenderit vero ab omnis, repudiandae possimus.
+        Tempore architecto tenetur delectus iure pariatur sit, alias laudantium odit sapiente, nulla nesciunt. In at
+        deserunt, quo, voluptate fuga dolores perferendis aut corporis laboriosam adipisci labore minus numquam
+        recusandae mollitia sapiente vero! Ducimus perferendis nisi adipisci veritatis. Error minus praesentium ratione
+        labore rerum soluta. Dolore nam incidunt quo quibusdam ex similique maiores aliquid ipsam, optio, voluptatibus
+        eos inventore sapiente, delectus veniam. Nemo blanditiis vero facilis odit accusamus magni unde, cum aliquid sed
+        inventore consequuntur aliquam aut at sunt, beatae non provident illum recusandae. Labore voluptatem aspernatur
+        repellendus porro delectus placeat quibusdam non quam nisi quae eius minima, tempore corporis incidunt nam alias
+        consectetur id pariatur fugiat fuga iste! Quis facere culpa suscipit excepturi quaerat, nesciunt, enim mollitia
+        quia sequi debitis doloribus. Possimus sunt voluptatem dignissimos temporibus pariatur suscipit saepe a ipsa
+        quae in, aperiam voluptas quia! Fugit voluptatibus ea id temporibus! Quia quidem voluptas at vero laboriosam
+        aliquid id perspiciatis quod rem alias consequatur, quas blanditiis dolorem praesentium voluptatibus impedit
+        suscipit placeat, inventore excepturi a numquam autem? Mollitia unde sunt quos vitae ratione dolorum
+        reprehenderit eaque quidem excepturi necessitatibus, adipisci nemo, dolor a doloremque quia dolores earum
+        consectetur quod est. Assumenda, doloremque maiores? Eum, quo totam? Dolorum culpa aliquid magnam autem
+        molestias, minus aut consequuntur ratione tempore officia dicta nesciunt, qui voluptatem perspiciatis
+        consequatur! In quis dignissimos ipsam consequatur voluptas magni repellendus nihil inventore fugit vitae?
+        Tempora dicta sunt eaque neque cumque nihil magni nostrum ex nam quae. Iste nemo placeat est modi, ullam,
+        nostrum laudantium reiciendis quas autem perspiciatis nobis eveniet sint quibusdam deleniti itaque ex corrupti
+        praesentium inventore ut.
+      </p>
+    </section>
 
-    <footer class="navbar bg-dark text-white fixed-bottom">
-        <div class="container">            
-            <div class="text-center navbar-text mr-auto">
-                <span>&copy; <script>document.write(new Date().getFullYear());</script> Lucas Di Paola</span>
-            </div>
-        </div>
-    </footer>
+  </div>
+
+  <footer class="navbar bg-dark text-white fixed-bottom">
+    <div class="container">
+      <div class="text-center navbar-text mr-auto">
+        <span>&copy;
+          <script>document.write(new Date().getFullYear());</script> Lucas Di Paola</span>
+      </div>
+    </div>
+  </footer>
+  <script src="assets/script/myscript.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </html>
