updated social links

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
                     <ul class="list-group list-group-horizontal-sm navbar-text">
                         <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
                         <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://github.com/ldipaola" target="_blank"><i class="fab fa-github"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://twitter.com/explore"><i class="fab fa-twitter"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://linkedin.com/in/lucas-d-777830160"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://twitter.com/explore" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://linkedin.com/in/lucas-d-777830160" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>                
           </ul>
         </div>
