--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,35 @@
         </div>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm"><p>
+            If you wanna get in touch, talk to me about a project collaboration or just say g'day,
+            fill out the form below to send an email and let's talk.
+          </p>
+          </div>
+        </div>
+        <form action="mailto:ldipaola66@gmail.com" method="post" enctype="text/plain">
+          <div class="form-group">
+            <label for="myContactFormName"></label>
+            <input type="text" class="form-control" id="myContactFormName" placeholder="Your name">
+          </div>
+          <div class="form-group">
+            <label for="myContactFormEmail"></label>
+            <input type="email" class="form-control" id="myContactFormEmail" placeholder="name@example.com">
+          </div>
+          <div class="form-group">
+            <label for="myContactFormSubject"></label>
+            <input type="text" class="form-control" id="myContactFormSubject" placeholder="Message Subject">
+          </div>
+          <div class="form-group">
+            <label for="myContactFormMessage"></label>
+            <textarea class="form-control" id="myContactFormMessage" rows="3" type="text" placeholder="Message"></textarea>
+          </div>
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset"> 
+        </form>
+      </div>
       <footer class="navbar bg-dark text-white fixed-bottom">
         <div class="container">            
             <div class="text-center navbar-text mr-auto">
