--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,21 @@
         </div>
         </div>
       </nav>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+        </div>
+        <div class="row">
+          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+        </div>
+        <div class="row">
+          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+        </div>
+
+      </div>
       <footer class="navbar bg-dark text-white fixed-bottom">
         <div class="container">            
             <div class="text-center navbar-text mr-auto">
