--- a/portfolio.html
+++ b/portfolio.html
@@ -1,60 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/ce4c6ae522.js" crossorigin="anonymous"></script>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mb-5 bg-white rounded">
-        <div class="container">
-        <a class="navbar-brand" href="#">Lucas Di Paola</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item navbar-text"><a class="nav-link" href="index.html">Home</a></li>    
-                <li class="nav-item navbar-text"><a class="nav-link active" href="portfolio.html">Portfolio <span class="sr-only">(current)</span></a></li>
-                <li class="nav-item navbar-text"><a class="nav-link" href="contact.html">Contact</a></li>
-                    <ul class="list-group list-group-horizontal-sm navbar-text">
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://github.com/ldipaola" target="_blank"><i class="fab fa-github"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://twitter.com/explore" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                        <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item" href="https://linkedin.com/in/lucas-d-777830160" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
-                    </ul>                
-          </ul>
-        </div>
-        </div>
-      </nav>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-        </div>
-        <div class="row">
-          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-        </div>
-        <div class="row">
-          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-          <div class="col-sm"><a href="https://placeholder.com"><img src="https://via.placeholder.com/500x300" class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-        </div>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/ce4c6ae522.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-3 mb-5 bg-white rounded">
+    <div class="container">
+      <a class="navbar-brand navbar-text" href="index.html">Lucas Di Paola</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item navbar-text"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item navbar-text"><a class="nav-link active" href="portfolio.html">Portfolio <span
+                class="sr-only">(current)</span></a></li>
+          <li class="nav-item navbar-text"><a class="nav-link" href="contact.html">Contact</a></li>
+          <ul class="list-group list-group-horizontal-sm navbar-text">
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item"
+                href="https://codepen.io/Lukey88/pens/public" target="_blank"><i class="fab fa-codepen"></i></a></li>
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item"
+                href="https://github.com/ldipaola" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li class="nav-item list-group-item border-0"><a class="nav-link horizontal-group-item"
+                href="https://linkedin.com/in/lucas-d-777830160" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            </li>
+          </ul>
+        </ul>
       </div>
-      <footer class="navbar bg-dark text-white fixed-bottom">
-        <div class="container">            
-            <div class="text-center navbar-text mr-auto">
-                <span>&copy; <script>document.write(new Date().getFullYear());</script> Lucas Di Paola</span>
-            </div>
-        </div>
-    </footer>
+    </div>
+  </nav>
+  <main class="container">
+    <section class="row">
+      <header class="col-sm-12">
+        <h2><strong>Work</strong></h2>
+      </header>
+    </section>
+    <section class="row">
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/LmPVzv" target="_blank"><img src="assets/img/canvasThumb.png"
+            class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/ypdQbJ" target="_blank"><img src="assets/img/weatherThumb.png"
+            class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+    </section>
+    <section class="row">
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/GdypJM" target="_blank"><img src="assets/img/calcThumb.png"
+            class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/full/NYZyVz" target="_blank"><img src="assets/img/partThumb.png"
+            class="img-fluid shadow mb-5 bg-white rounded"></a></div>
+    </section>
+
+  </main>
+  <footer class="navbar bg-dark text-white fixed-bottom">
+    <section class="container">
+      <div class="text-center navbar-text mr-auto">
+        <span>&copy;
+          <script>document.write(new Date().getFullYear());</script> Lucas Di Paola</span>
+      </div>
+    </section>
+  </footer>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+  integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </html>
