added burger project

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
       </header>
     </section>
     <section class="row">
-      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/LmPVzv" target="_blank"><img src="assets/img/canvasThumb.png"
+      <div class="col-sm"><a href="https://quiet-lake-77588.herokuapp.com/" target="_blank"><img src="assets/img/burgerThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
       <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/ypdQbJ" target="_blank"><img src="assets/img/weatherThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
