--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
       </div>
     </div>
   </nav>
-  <main class="container">
+  <main class="container portfolio-main">
     <section class="row">
       <header class="col-sm-12">
         <h2><strong>Work</strong></h2>
