added css effect

--- a/portfolio.html
+++ b/portfolio.html
@@ -46,15 +46,15 @@
       </header>
     </section>
     <section class="row">
-      <div class="col-sm"><a href="https://quiet-lake-77588.herokuapp.com/" target="_blank"><img src="assets/img/burgerThumb.png"
+      <div class="col-sm"><a href="https://quiet-lake-77588.herokuapp.com/" target="_blank"><img class="portfolio" src="assets/img/burgerThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/ypdQbJ" target="_blank"><img src="assets/img/weatherThumb.png"
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/ypdQbJ" target="_blank"><img class="portfolio"  src="assets/img/weatherThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
     </section>
     <section class="row">
-      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/GdypJM" target="_blank"><img src="assets/img/calcThumb.png"
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/GdypJM" target="_blank"><img class="portfolio" src="assets/img/calcThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
-      <div class="col-sm"><a href="https://codepen.io/Lukey88/full/NYZyVz" target="_blank"><img src="assets/img/partThumb.png"
+      <div class="col-sm"><a href="https://codepen.io/Lukey88/full/NYZyVz" target="_blank"><img class="portfolio" src="assets/img/partThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
     </section>
 
