--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
     </section>
     <section class="row">
-      <div class="col-sm"><a href="https://codepen.io/Lukey88/pen/GdypJM" target="_blank"><img class="portfolio" src="assets/img/calcThumb.png"
+      <div class="col-sm"><a href="https://project-2-monash.herokuapp.com/" target="_blank"><img class="portfolio" src="assets/img/budgetTrackerThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
       <div class="col-sm"><a href="https://codepen.io/Lukey88/full/NYZyVz" target="_blank"><img class="portfolio" src="assets/img/partThumb.png"
             class="img-fluid shadow mb-5 bg-white rounded"></a></div>
