updated picture css

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       </section>
       <article class="row">
         <section class="col-sm-12">
-          <img src="assets/img/pic.jpg" class="rounded-circle img-fluid shadow bg-white rounded z-depth-2  float-left">
-            <p id="aboutMe">Hi, my name is Lucas, I
-            like to connect the dots and find solutions to solve problems, passionate about coding and all things tech
-            related. In my spare time you'll find me out casting a line or hitting the local mountain bike trails.
-          </p>
+            <img src="assets/img/pic.jpg" class="avatar img-fluid shadow bg-white z-depth-2  float-left">
+              <p id="aboutMe">Hi, my name is Lucas, I
+              like to connect the dots and find solutions to solve problems, passionate about coding and all things tech
+              related. In my spare time you'll find me out casting a line or hitting the local mountain bike trails.
+            </p>
         </section>
       </article>
     </div>
