--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             </div>
       </div>
       
-        <div class="col-sm"><div class="img-container"><a href="https://codepen.io/Lukey88/pen/ypdQbJ" target="_blank"><img  src="assets/img/weatherThumb.png"
+        <div class="col-sm"><div class="img-container"><a href="https://ldipaola.github.io/weather-dashboard/" target="_blank"><img  src="assets/img/weatherThumb.png"
               class="img-fluid shadow mb-5 bg-white rounded portfolio image"><div class="middle">
                 <div class="hover-text">Weather App</div>
               </div></a>
